# study

./: .buildinfo  .gitignore  404.html  CHANGELOG  Dockerfile  LICENSE  README.md  changelog.html  genindex.html  index.html  intro.html  license.html  markdown-notebooks.html  markdown.html  mkdocs.yml  objects.inv  requirements.txt  search.html  searchindex.js  sitemap.xml
ctf/: htb.html  pico-2019.html  pico-binex.html  pico-crypto.html  pico-forensics.html  pico-general.html  pico-re.html  pico-webex.html  picoCTF.html  portswigger.html  ps-accesscontrol.html  ps-auth.html  ps-csrf.html  ps-dirtrav.html  ps-hostheader.html  ps-oscmdi.html  ps-sqi.html  ps-xss.html  rz-coding.html  rz-jailescape.html  rz-javascript.html  rz-xdata.html  rzeroctf.html
docs/: LICENSE  _config.yml  _toc.yml  changelog.md  index.md  intro.md  picoCTF.md
linux/: lfs.html
scratch/: Untitled.ipynb  charts.ipynb
scratch/skills/languages/cpp/jumping_into_cpp/target_demo/: CMakeLists.txt  demo.cpp  demo.md
search/: search_index.json
skills/: webexploit.html
testbed/: index.html  lanturtle.html  pktsquirrel.html  testbed.html  virtual_machines.html  vpn.html
thinkdsp/: 01-SoundsAndSignals.ipynb  02-Harmonics.ipynb  03-NonPeriodicSignals.ipynb  04-Noise.ipynb  05-Autocorrelation.ipynb  06-DiscreteCosineTransform.ipynb  07-DiscreteFourierTransform.ipynb  08-FilteringAndConvolution.ipynb  09-DifferentiationAndIntegration.ipynb  10-LTISystems.ipynb  11-ModulationAndSampling.ipynb  README.md  thinkdsp.py
tools/: hash_me_please.py
vs/: assembly.html  cpp.html  fuzzing.html  webex.html  (+1 more)
(+383 files in other folders)
